// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sPage/Users/Submit/Company Snapshot > renders Existing Submission (with id) correctly 1`] = `
<div class="
  flex
  flex-col
  items-center
  justify-center
  lg:gap-10
  lg:grid
  lg:grid-cols-10
  min-h-screen
">
  <!-- v-if -->
  <div class="lg:col-span-10">
    <main class="
      min-h-[calc(100vh-var(--ui-header-height))]
      py-20
    ">
      <div class="
        bg-default
        divide-default
        divide-y
        max-w-2xl
        mx-auto
        p-8
        ring
        ring-default
        rounded-lg
      ">
        <!-- v-if -->
        <div class="
          p-4
          sm:p-6
        ">
          <uheading
            class="
              font-semibold
              mb-6
              text-2xl
              text-center
            "
            level="2"
          >
            Submit Company
          </uheading>
          <div class="
            mb-6
            text-center
          ">
            <p class="
              text-gray-500
              text-sm
            ">
              Your company is already submitted. You can edit the details below.
            </p>
            <div>
              <span class="
                bg-error
                font-medium
                gap-1
                inline-flex
                items-center
                px-2
                py-1
                rounded-md
                text-inverted
                text-xs
              ">
                <!-- v-if -->
                Not Verified
                <!-- v-if -->
              </span>
              <button
                class="
                  aria-disabled:bg-primary
                  aria-disabled:cursor-not-allowed
                  aria-disabled:opacity-75
                  bg-primary
                  disabled:bg-primary
                  disabled:cursor-not-allowed
                  disabled:opacity-75
                  focus-visible:outline-2
                  focus-visible:outline-offset-2
                  focus-visible:outline-primary
                  font-medium
                  gap-1.5
                  hover:bg-primary/75
                  inline-flex
                  items-center
                  px-2.5
                  py-1.5
                  rounded-md
                  text-inverted
                  text-sm
                  transition-colors
                "
                type="button"
              >
                <!-- v-if -->
                Check Backlink
                <!-- v-if -->
              </button>
              <span>
                (must have a
                <bold>
                  do follow
                </bold>
                backlink to current site on the submission domain homepage, if not working, ensure you have \`SERPVerificationBot/1.0\` user-agent whitelisted)
              </span>
            </div>
          </div>
          <form
            class="space-y-6"
            id="v-0-0-0"
          >
            <div class="
              mt-6
              text-sm
            ">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-1"
                  >
                    Company Name
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <input
                    aria-describedby=""
                    aria-invalid="false"
                    autocomplete="off"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-1"
                    name="name"
                    placeholder="SERP AI"
                    type="text"
                  />
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-2"
                  >
                    Domain
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <input
                    aria-describedby=""
                    aria-invalid="false"
                    autocomplete="off"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-2"
                    name="domain"
                    placeholder="serp.ai"
                    type="text"
                  />
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-3"
                  >
                    Description
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <textarea
                    aria-describedby=""
                    aria-invalid="false"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-3"
                    name="description"
                    placeholder="A detailed overview of your company"
                    rows="5"
                  ></textarea>
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-4"
                  >
                    Pricing Options
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <!---->
                <div
                  class="
                    bg-default
                    flex-wrap
                    focus-visible:ring-2
                    focus-visible:ring-inset
                    focus-visible:ring-primary
                    gap-1.5
                    has-focus-visible:ring-2
                    has-focus-visible:ring-primary
                    inline-flex
                    items-center
                    pe-9
                    px-2.5
                    py-1.5
                    relative
                    ring
                    ring-accented
                    ring-inset
                    rounded-md
                    text-highlighted
                    text-sm
                    transition-colors
                    w-full
                  "
                  dir="ltr"
                  id="v-0-0-4"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls=""
                    aria-describedby=""
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-invalid="false"
                    autocapitalize="off"
                    autocomplete="false"
                    autocorrect="off"
                    class="
                      bg-transparent
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus:outline-none
                      placeholder:text-dimmed
                    "
                    dir="ltr"
                    role="combobox"
                    type="text"
                    value=""
                  />
                  <!---->
                  <!-- v-if -->
                  <button
                    aria-controls=""
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Show popup"
                    class="
                      absolute
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      end-0
                      flex
                      group
                      inset-y-0
                      items-center
                      pe-2.5
                    "
                    data-state="closed"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="
                        i-lucide:chevron-down
                        iconify
                        shrink-0
                        size-5
                        text-dimmed
                      "
                    ></span>
                  </button>
                </div>
                <!-- teleport start -->
                <!-- teleport end -->
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-5"
                  >
                    Tagline
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <input
                    aria-describedby=""
                    aria-invalid="false"
                    autocomplete="off"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-5"
                    maxlength="75"
                    name="oneLiner"
                    placeholder="A short company tagline (max 75 characters)"
                    type="text"
                  />
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-6"
                  >
                    Category(s)
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <!---->
                <div
                  class="
                    bg-default
                    flex-wrap
                    focus-visible:ring-2
                    focus-visible:ring-inset
                    focus-visible:ring-primary
                    gap-1.5
                    has-focus-visible:ring-2
                    has-focus-visible:ring-primary
                    inline-flex
                    items-center
                    pe-9
                    px-2.5
                    py-1.5
                    relative
                    ring
                    ring-accented
                    ring-inset
                    rounded-md
                    text-highlighted
                    text-sm
                    transition-colors
                    w-full
                  "
                  dir="ltr"
                  id="v-0-0-6"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls=""
                    aria-describedby=""
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-invalid="false"
                    autocapitalize="off"
                    autocomplete="false"
                    autocorrect="off"
                    class="
                      bg-transparent
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus:outline-none
                      placeholder:text-dimmed
                    "
                    dir="ltr"
                    role="combobox"
                    type="text"
                    value=""
                  />
                  <!---->
                  <!-- v-if -->
                  <button
                    aria-controls=""
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Show popup"
                    class="
                      absolute
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      end-0
                      flex
                      group
                      inset-y-0
                      items-center
                      pe-2.5
                    "
                    data-state="closed"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="
                        i-lucide:chevron-down
                        iconify
                        shrink-0
                        size-5
                        text-dimmed
                      "
                    ></span>
                  </button>
                </div>
                <!-- teleport start -->
                <!-- teleport end -->
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-7"
                  >
                    Tags
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <input
                    aria-describedby=""
                    aria-invalid="false"
                    autocomplete="off"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-7"
                    name="tags"
                    placeholder="e.g. AI, SEO, Marketing"
                    type="text"
                    value=""
                  />
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-8"
                  >
                    Company Logo
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  border
                  border-dashed
                  border-gray-300
                  p-4
                  rounded
                ">
                  <input
                    accept="image/*"
                    class="
                      text-sm
                      w-full
                    "
                    type="file"
                  />
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-center">
              <button
                class="
                  aria-disabled:bg-secondary
                  aria-disabled:cursor-not-allowed
                  aria-disabled:opacity-75
                  bg-secondary
                  disabled:bg-secondary
                  disabled:cursor-not-allowed
                  disabled:opacity-75
                  focus-visible:outline-2
                  focus-visible:outline-offset-2
                  focus-visible:outline-secondary
                  font-medium
                  gap-2
                  hover:bg-secondary/75
                  inline-flex
                  items-center
                  px-3
                  py-2
                  rounded-md
                  text-base
                  text-inverted
                  transition-colors
                "
                type="submit"
              >
                <!-- v-if -->
                Submit
                <!-- v-if -->
              </button>
            </div>
          </form>
        </div>
        <!-- v-if -->
      </div>
    </main>
  </div>
  <!-- v-if -->
</div>
`;

exports[`sPage/Users/Submit/Company Snapshot > renders New Submission (no id) correctly 1`] = `
<div class="
  flex
  flex-col
  items-center
  justify-center
  lg:gap-10
  lg:grid
  lg:grid-cols-10
  min-h-screen
">
  <!-- v-if -->
  <div class="lg:col-span-10">
    <main class="
      min-h-[calc(100vh-var(--ui-header-height))]
      py-20
    ">
      <div class="
        bg-default
        divide-default
        divide-y
        max-w-2xl
        mx-auto
        p-8
        ring
        ring-default
        rounded-lg
      ">
        <!-- v-if -->
        <div class="
          p-4
          sm:p-6
        ">
          <uheading
            class="
              font-semibold
              mb-6
              text-2xl
              text-center
            "
            level="2"
          >
            Submit Company
          </uheading>
          <!-- v-if -->
          <form
            class="space-y-6"
            id="v-0-0-0"
          >
            <div class="
              mt-6
              text-sm
            ">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-1"
                  >
                    Company Name
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <input
                    aria-describedby=""
                    aria-invalid="false"
                    autocomplete="off"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-1"
                    name="name"
                    placeholder="SERP AI"
                    type="text"
                    value=""
                  />
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-2"
                  >
                    Domain
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <input
                    aria-describedby=""
                    aria-invalid="false"
                    autocomplete="off"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-2"
                    name="domain"
                    placeholder="serp.ai"
                    type="text"
                    value=""
                  />
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-3"
                  >
                    Description
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <textarea
                    aria-describedby=""
                    aria-invalid="false"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-3"
                    name="description"
                    placeholder="A detailed overview of your company"
                    rows="5"
                    value=""
                  ></textarea>
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-4"
                  >
                    Pricing Options
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <!---->
                <div
                  class="
                    bg-default
                    flex-wrap
                    focus-visible:ring-2
                    focus-visible:ring-inset
                    focus-visible:ring-primary
                    gap-1.5
                    has-focus-visible:ring-2
                    has-focus-visible:ring-primary
                    inline-flex
                    items-center
                    pe-9
                    px-2.5
                    py-1.5
                    relative
                    ring
                    ring-accented
                    ring-inset
                    rounded-md
                    text-highlighted
                    text-sm
                    transition-colors
                    w-full
                  "
                  dir="ltr"
                  id="v-0-0-4"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls=""
                    aria-describedby=""
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-invalid="false"
                    autocapitalize="off"
                    autocomplete="false"
                    autocorrect="off"
                    class="
                      bg-transparent
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus:outline-none
                      placeholder:text-dimmed
                    "
                    dir="ltr"
                    role="combobox"
                    type="text"
                    value=""
                  />
                  <!---->
                  <!-- v-if -->
                  <button
                    aria-controls=""
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Show popup"
                    class="
                      absolute
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      end-0
                      flex
                      group
                      inset-y-0
                      items-center
                      pe-2.5
                    "
                    data-state="closed"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="
                        i-lucide:chevron-down
                        iconify
                        shrink-0
                        size-5
                        text-dimmed
                      "
                    ></span>
                  </button>
                </div>
                <!-- teleport start -->
                <!-- teleport end -->
                <input
                  data-hidden=""
                  name="pricing"
                  style="
                    position: absolute;
                    border: 0px;
                    width: 1px;
                    height: 1px;
                    padding: 0px;
                    margin: -1px;
                    overflow: hidden;
                    clip: rect(0, 0, 0, 0);
                    clip-path: inset(50%);
                    white-space: nowrap;
                    word-wrap: normal;
                  "
                  tabindex="-1"
                  value=""
                />
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      after:content-['*']
                      after:ms-0.5
                      after:text-error
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-5"
                  >
                    Tagline
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <input
                    aria-describedby=""
                    aria-invalid="false"
                    autocomplete="off"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-5"
                    maxlength="75"
                    name="oneLiner"
                    placeholder="A short company tagline (max 75 characters)"
                    type="text"
                    value=""
                  />
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-6"
                  >
                    Category(s)
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <!---->
                <div
                  class="
                    bg-default
                    flex-wrap
                    focus-visible:ring-2
                    focus-visible:ring-inset
                    focus-visible:ring-primary
                    gap-1.5
                    has-focus-visible:ring-2
                    has-focus-visible:ring-primary
                    inline-flex
                    items-center
                    pe-9
                    px-2.5
                    py-1.5
                    relative
                    ring
                    ring-accented
                    ring-inset
                    rounded-md
                    text-highlighted
                    text-sm
                    transition-colors
                    w-full
                  "
                  dir="ltr"
                  id="v-0-0-6"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls=""
                    aria-describedby=""
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-invalid="false"
                    autocapitalize="off"
                    autocomplete="false"
                    autocorrect="off"
                    class="
                      bg-transparent
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus:outline-none
                      placeholder:text-dimmed
                    "
                    dir="ltr"
                    role="combobox"
                    type="text"
                    value=""
                  />
                  <!---->
                  <!-- v-if -->
                  <button
                    aria-controls=""
                    aria-disabled="false"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="Show popup"
                    class="
                      absolute
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      end-0
                      flex
                      group
                      inset-y-0
                      items-center
                      pe-2.5
                    "
                    data-state="closed"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="
                        i-lucide:chevron-down
                        iconify
                        shrink-0
                        size-5
                        text-dimmed
                      "
                    ></span>
                  </button>
                </div>
                <!-- teleport start -->
                <!-- teleport end -->
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-7"
                  >
                    Tags
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  inline-flex
                  items-center
                  relative
                  w-full
                ">
                  <input
                    aria-describedby=""
                    aria-invalid="false"
                    autocomplete="off"
                    class="
                      bg-default
                      border-0
                      disabled:cursor-not-allowed
                      disabled:opacity-75
                      focus-visible:ring-2
                      focus-visible:ring-inset
                      focus-visible:ring-primary
                      focus:outline-none
                      gap-1.5
                      placeholder:text-dimmed
                      px-2.5
                      py-1.5
                      ring
                      ring-accented
                      ring-inset
                      rounded-md
                      text-highlighted
                      text-sm
                      transition-colors
                      w-full
                    "
                    id="v-0-0-7"
                    name="tags"
                    placeholder="e.g. AI, SEO, Marketing"
                    type="text"
                    value=""
                  />
                  <!-- v-if -->
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-sm">
              <div class="">
                <div class="
                  content-center
                  flex
                  items-center
                  justify-between
                ">
                  <label
                    class="
                      block
                      font-medium
                      text-default
                    "
                    for="v-0-0-8"
                  >
                    Company Logo
                  </label>
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
              <div class="
                mt-1
                relative
              ">
                <div class="
                  border
                  border-dashed
                  border-gray-300
                  p-4
                  rounded
                ">
                  <input
                    accept="image/*"
                    class="
                      text-sm
                      w-full
                    "
                    type="file"
                  />
                  <!-- v-if -->
                </div>
                <!-- v-if -->
              </div>
            </div>
            <div class="text-center">
              <button
                class="
                  aria-disabled:bg-secondary
                  aria-disabled:cursor-not-allowed
                  aria-disabled:opacity-75
                  bg-secondary
                  disabled:bg-secondary
                  disabled:cursor-not-allowed
                  disabled:opacity-75
                  focus-visible:outline-2
                  focus-visible:outline-offset-2
                  focus-visible:outline-secondary
                  font-medium
                  gap-2
                  hover:bg-secondary/75
                  inline-flex
                  items-center
                  px-3
                  py-2
                  rounded-md
                  text-base
                  text-inverted
                  transition-colors
                "
                type="submit"
              >
                <!-- v-if -->
                Submit
                <!-- v-if -->
              </button>
            </div>
          </form>
        </div>
        <!-- v-if -->
      </div>
    </main>
  </div>
  <!-- v-if -->
</div>
`;
